Fixed dropdown on tablet

--- a/frontend/src/scss/modules/_shifts.scss
+++ b/frontend/src/scss/modules/_shifts.scss
@@ -218,6 +218,7 @@
   }
   &__surname {
     font-weight: bold;
+    text-transform: uppercase;
   }
 }
 
